--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,14 +36,6 @@ jobs:
         if: steps.repo_check.outputs.should_deploy == 'true'
         uses: actions/checkout@v5
 
-      - name: Login to GitHub CR
-        if: steps.repo_check.outputs.should_deploy == 'true'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract Versions
         if: steps.repo_check.outputs.should_deploy == 'true'
         id: versions
@@ -53,16 +45,19 @@ jobs:
           echo "MC_VERSION=$(echo $VERSION | cut -d '+' -f 2)" >> $GITHUB_ENV
 
       - name: Set up QEMU
+        if: steps.repo_check.outputs.should_deploy == 'true'
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
+        if: steps.repo_check.outputs.should_deploy == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub CR
+        if: steps.repo_check.outputs.should_deploy == 'true'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Metadata
@@ -79,10 +74,6 @@ jobs:
             type=raw,value=${{ env.PUMPKIN_VERSION }}
             type=raw,value=mc${{ env.MC_VERSION }}-${{ env.PUMPKIN_VERSION }}
 
-      - name: Docker Buildx
-        if: steps.repo_check.outputs.should_deploy == 'true'
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and Push
         if: steps.repo_check.outputs.should_deploy == 'true'
         uses: docker/build-push-action@v6
@@ -93,10 +84,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
 
-
       - name: Generate SBOM
+        if: steps.repo_check.outputs.should_deploy == 'true'
         uses: anchore/sbom-action@v0
         with:
-          image: ${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}:latest
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           format: spdx-json
           artifact-name: sbom-pumpkin-${{ env.PUMPKIN_VERSION }}
